--- a/TheMovieDB/TheMovieDB/features/Details/Details.storyboard
+++ b/TheMovieDB/TheMovieDB/features/Details/Details.storyboard
@@ -30,7 +30,7 @@
                                                         <color key="tintColor" red="0.8902680838" green="0.2070635129" blue="0.17371135160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     </imageView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hL4-qj-9q5">
-                                                        <rect key="frame" x="138" y="83" width="138" height="79"/>
+                                                        <rect key="frame" x="157" y="83.5" width="100" height="77.5"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="100" id="B5N-xJ-dTY"/>
                                                             <constraint firstAttribute="height" constant="80" id="aD4-5K-RoY"/>
@@ -98,19 +98,19 @@
                                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="41"/>
                                                                         <subviews>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(2018)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0KI-Q2-nQg">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="83" height="41"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="69" height="41"/>
                                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                                 <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                                                 <nil key="highlightedColor"/>
                                                                             </label>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2h 21min" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qCx-bR-ggz">
-                                                                                <rect key="frame" x="83" y="0.0" width="82.5" height="41"/>
+                                                                                <rect key="frame" x="69" y="0.0" width="69" height="41"/>
                                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <nil key="highlightedColor"/>
                                                                             </label>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Biography, Drama, History" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zn5-eE-Lei">
-                                                                                <rect key="frame" x="165.5" y="0.0" width="248.5" height="41"/>
+                                                                                <rect key="frame" x="138" y="0.0" width="276" height="41"/>
                                                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                                                                 <color key="textColor" name="gold"/>
                                                                                 <nil key="highlightedColor"/>
@@ -153,7 +153,7 @@
                                                         <rect key="frame" x="138" y="0.0" width="276" height="327"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oqv-pR-7DO">
-                                                                <rect key="frame" x="6" y="0.0" width="264" height="327"/>
+                                                                <rect key="frame" x="6" y="0.0" width="264" height="229.5"/>
                                                                 <string key="text">The near future, a time when both hope and hardships drive humanity to look to the stars and beyond. While a mysterious phenomenon menaces to destroy life on planet Earth, astronaut Roy McBride undertakes a mission across the immensity of space and its many perils to uncover the truth about a lost expedition that decades before boldly faced emptiness and silence in search of the unknown.</string>
                                                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="16"/>
                                                                 <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -169,7 +169,7 @@
                                                         </constraints>
                                                     </view>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Sh3-pi-Tq1">
-                                                        <rect key="frame" x="0.0" y="32" width="138" height="262"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="138" height="327"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </imageView>
                                                 </subviews>
@@ -182,7 +182,7 @@
                                                     <constraint firstAttribute="bottom" secondItem="Sh3-pi-Tq1" secondAttribute="bottom" id="Ehg-xn-Gbm"/>
                                                     <constraint firstItem="Sh3-pi-Tq1" firstAttribute="width" secondItem="kIp-CZ-jHu" secondAttribute="width" multiplier="1/3" id="GGe-of-gaI"/>
                                                     <constraint firstItem="p3Z-gl-6PA" firstAttribute="top" secondItem="kIp-CZ-jHu" secondAttribute="top" id="aDv-Cm-pLf"/>
-                                                    <constraint firstItem="Sh3-pi-Tq1" firstAttribute="top" secondItem="kIp-CZ-jHu" secondAttribute="top" constant="6" id="dr8-Iy-px1"/>
+                                                    <constraint firstItem="Sh3-pi-Tq1" firstAttribute="top" secondItem="kIp-CZ-jHu" secondAttribute="top" id="dr8-Iy-px1"/>
                                                     <constraint firstAttribute="trailing" secondItem="p3Z-gl-6PA" secondAttribute="trailing" id="mng-nf-n9x"/>
                                                 </constraints>
                                             </view>
@@ -193,10 +193,10 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="138" height="82"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9JY-jz-pqk">
-                                                                <rect key="frame" x="54" y="4" width="30" height="30"/>
+                                                                <rect key="frame" x="59" y="4" width="20" height="20"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="height" constant="30" id="iQC-c3-8qv"/>
-                                                                    <constraint firstAttribute="width" constant="30" id="msv-CG-fb9"/>
+                                                                    <constraint firstAttribute="height" constant="20" id="iQC-c3-8qv"/>
+                                                                    <constraint firstAttribute="width" constant="20" id="msv-CG-fb9"/>
                                                                 </constraints>
                                                                 <color key="tintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <state key="normal" backgroundImage="star.fill" catalog="system"/>
@@ -205,7 +205,7 @@
                                                                 <rect key="frame" x="0.0" y="27.5" width="138" height="54.5"/>
                                                                 <string key="text">7.7/10
 16056</string>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
@@ -224,8 +224,11 @@
                                                         <rect key="frame" x="138" y="0.0" width="276" height="82"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xQf-NW-wVa">
-                                                                <rect key="frame" x="16" y="20.5" width="244" height="41"/>
+                                                                <rect key="frame" x="16" y="16" width="244" height="50"/>
                                                                 <color key="backgroundColor" red="0.8902680838" green="0.2070635129" blue="0.17371135160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="50" id="wVZ-Mw-0wT"/>
+                                                                </constraints>
                                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <inset key="imageEdgeInsets" minX="-25" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                 <state key="normal" title="Add to Favorites" image="plus" catalog="system">
@@ -238,7 +241,6 @@
                                                             <constraint firstAttribute="trailing" secondItem="xQf-NW-wVa" secondAttribute="trailing" constant="16" id="A8G-Zk-dEz"/>
                                                             <constraint firstItem="xQf-NW-wVa" firstAttribute="centerY" secondItem="3nt-cb-frI" secondAttribute="centerY" id="Qel-8Y-4pD"/>
                                                             <constraint firstItem="xQf-NW-wVa" firstAttribute="leading" secondItem="3nt-cb-frI" secondAttribute="leading" constant="16" id="RE6-2L-52O"/>
-                                                            <constraint firstItem="xQf-NW-wVa" firstAttribute="height" secondItem="3nt-cb-frI" secondAttribute="height" multiplier="1/2" id="pdC-Jo-xB9"/>
                                                         </constraints>
                                                     </view>
                                                 </subviews>
