--- a/TheMovieDB/TheMovieDB/features/Favorites/Favorites.storyboard
+++ b/TheMovieDB/TheMovieDB/features/Favorites/Favorites.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,9 +16,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WIj-Yl-PIB">
-                                <rect key="frame" x="0.0" y="229" width="414" height="448"/>
-                            </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vVg-YV-31H">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -38,29 +36,28 @@
                                                         <constraint firstAttribute="height" constant="150" id="vXZ-i9-XRi"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ARTEMIS FOWL" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nX4-le-SUb">
-                                                    <rect key="frame" x="178" y="11" width="216" height="100"/>
-                                                    <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="25"/>
-                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="ARTEMIS FOWL" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nX4-le-SUb">
+                                                    <rect key="frame" x="178" y="11" width="216" height="39"/>
+                                                    <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="30"/>
+                                                    <color key="textColor" name="gold"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year 2018" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ue-se-7J4">
-                                                    <rect key="frame" x="178" y="89" width="216" height="50"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <rect key="frame" x="178" y="58" width="216" height="19.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="trailingMargin" secondItem="6Ue-se-7J4" secondAttribute="trailing" id="0u7-vK-nN5"/>
                                                 <constraint firstItem="EqF-50-YBG" firstAttribute="leading" secondItem="efB-rK-9dr" secondAttribute="leadingMargin" id="1ZR-4q-Scq"/>
                                                 <constraint firstItem="nX4-le-SUb" firstAttribute="leading" secondItem="EqF-50-YBG" secondAttribute="trailing" constant="8" id="26V-di-6IP"/>
-                                                <constraint firstItem="6Ue-se-7J4" firstAttribute="height" secondItem="EqF-50-YBG" secondAttribute="height" multiplier="1/3" id="2Ux-Kz-Luf"/>
                                                 <constraint firstItem="nX4-le-SUb" firstAttribute="trailing" secondItem="efB-rK-9dr" secondAttribute="trailingMargin" id="BwT-DT-gkO"/>
-                                                <constraint firstItem="nX4-le-SUb" firstAttribute="height" secondItem="EqF-50-YBG" secondAttribute="height" multiplier="2/3" id="GwH-O4-QA4"/>
                                                 <constraint firstItem="6Ue-se-7J4" firstAttribute="leading" secondItem="EqF-50-YBG" secondAttribute="trailing" constant="8" id="NTU-fm-ZbY"/>
                                                 <constraint firstItem="EqF-50-YBG" firstAttribute="centerY" secondItem="efB-rK-9dr" secondAttribute="centerY" id="h6x-bg-Eht"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="6Ue-se-7J4" secondAttribute="bottom" id="r9n-2g-PLT"/>
+                                                <constraint firstItem="6Ue-se-7J4" firstAttribute="top" secondItem="nX4-le-SUb" secondAttribute="bottom" constant="8" id="jSS-z1-SEK"/>
                                                 <constraint firstItem="nX4-le-SUb" firstAttribute="top" secondItem="efB-rK-9dr" secondAttribute="topMargin" id="sDG-at-B7V"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -78,6 +75,9 @@
                                     <outlet property="delegate" destination="PiT-FM-XXn" id="V3P-MA-jrj"/>
                                 </connections>
                             </tableView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WIj-Yl-PIB">
+                                <rect key="frame" x="0.0" y="154.5" width="414" height="597"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -86,13 +86,14 @@
                             <constraint firstItem="WIj-Yl-PIB" firstAttribute="width" secondItem="haa-KF-nvc" secondAttribute="width" id="T2J-F3-epe"/>
                             <constraint firstItem="vVg-YV-31H" firstAttribute="top" secondItem="4Fr-lL-XII" secondAttribute="top" id="TGU-0P-ytp"/>
                             <constraint firstItem="WIj-Yl-PIB" firstAttribute="centerX" secondItem="4Fr-lL-XII" secondAttribute="centerX" id="VH3-O9-fxi"/>
-                            <constraint firstItem="WIj-Yl-PIB" firstAttribute="height" secondItem="haa-KF-nvc" secondAttribute="height" multiplier="1/2" id="gcz-Rt-fFM"/>
+                            <constraint firstItem="WIj-Yl-PIB" firstAttribute="height" secondItem="haa-KF-nvc" secondAttribute="height" multiplier="2/3" id="gcz-Rt-fFM"/>
                             <constraint firstItem="WIj-Yl-PIB" firstAttribute="centerY" secondItem="4Fr-lL-XII" secondAttribute="centerY" id="rhd-hm-tbH"/>
                             <constraint firstItem="vVg-YV-31H" firstAttribute="leading" secondItem="4Fr-lL-XII" secondAttribute="leading" id="uOP-qR-pSs"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="4Fr-lL-XII"/>
                     </view>
                     <connections>
+                        <outlet property="emptyImage" destination="WIj-Yl-PIB" id="KYi-bp-gew"/>
                         <outlet property="tableView" destination="vVg-YV-31H" id="Qo8-Za-0ME"/>
                     </connections>
                 </viewController>
@@ -101,4 +102,9 @@
             <point key="canvasLocation" x="-314.49275362318843" y="193.52678571428569"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="gold">
+            <color red="1" green="0.6380000114440918" blue="0.0020000000949949026" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
